--- a/public/html/index.html
+++ b/public/html/index.html
@@ -55,21 +55,21 @@
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide">
-					<img src="../img/chicago.jpg" alt="배너" class="img">
+					<iframe width="100%" height="100%" src="https://www.youtube.com/embed/0sQYv-NFI1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<div class="slogan-wrap">
 						<h2 class="title">Chicago</h2>
 						<p class="content">Thank you, Chicago - A night we won't forget.</p>
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="../img/la.jpg" alt="배너" class="img">
+					<img src="../img/slide01.jpg" alt="배너" class="img">
 					<div class="slogan-wrap">
 						<h2 class="title">Los Angeles</h2>
 						<p class="content">We had the best time playing at Venice Beach!</p>
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="../img/ny.jpg" alt="배너" class="img">
+					<img src="../img/slide02.jpg" alt="배너" class="img">
 					<div class="slogan-wrap">
 						<h2 class="title">New York</h2>
 						<p class="content">The atmosphere in New York is lorem ipsum.</p>
@@ -86,7 +86,7 @@
 	<a name="band" class="anchor"></a>
 	<section class="band-wrapper">
 		<div class="wrapper">
-			<h2 class="title">THE BAND</h2>
+			<h2 class="title">THE Album</h2>
 			<h3 class="title">We love music</h3>
 			<p class="comment">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing
 				elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -97,16 +97,19 @@
 				nisi ut aliquip ex ea commodo consequat.</p>
 			<ul class="member-wrap clearfix">
 				<li class="member">
-					<h4 class="name">Name</h4>
-					<img src="../img/bandmember.jpg" alt="멤버사진" class="img">
+					<h4 class="name">Our love is great</h4>
+					<!-- <h4 class="name">2019.03.18</h4> -->
+					<img src="../img/a1.jpg" alt="앨범표지" class="img">
 				</li>
 				<li class="member">
-					<h4 class="name">Name</h4>
-					<img src="../img/bandmember.jpg" alt="멤버사진" class="img">
+					<h4 class="name">Every letter I sent you.</h4>
+					<!-- <h4 class="name">2019.12.10.</h4> -->
+					<img src="../img/a2.jpg" alt="앨범표지" class="img">
 				</li>
 				<li class="member">
-					<h4 class="name">Name</h4>
-					<img src="../img/bandmember.jpg" alt="멤버사진" class="img">
+					<h4 class="name">tellusboutyourself</h4>
+					<!-- <h4 class="name">2020.12.10</h4> -->
+					<img src="../img/a3.jpg" alt="앨범표지" class="img">
 				</li>
 			</ul>
 		</div>
@@ -121,15 +124,15 @@
 			<h3 class="title">Remember to book your tickets!</h3>
 			<ul class="ticket-wrap">
 				<li class="ticket clearfix">
-					<span class="month">September</span>
+					<span class="month">2018 / August</span>
 					<span class="soldout">Sold out</span>
 				</li>
 				<li class="ticket clearfix">
-					<span class="month">October</span>
+					<span class="month">2020 / February</span>
 					<span class="soldout">Sold out</span>
 				</li>
 				<li class="ticket clearfix">
-					<span class="month">November</span>
+					<span class="month">2021 / November</span>
 					<span class="cnt">3</span>
 				</li>
 			</ul>
@@ -137,29 +140,29 @@
 				<!-- li.city*3>.img-wrap>img.img^.cont-wrap>h4.name+.date+p.comment+button.bt-buy{Buy Tickets} -->
 				<li class="city">
 					<div class="img-wrap">
-						<img src="../img/newyork.jpg" alt="city" class="img">
+						<img src="../img/b1.jpg" alt="공연포스터" class="img">
 					</div>
 					<div class="cont-wrap">
 						<h4 class="name">New York</h4>
-						<div class="date">Fri 24 Nov 2021</div>
+						<div class="date">Sun 05 Aug 2018</div>
 						<p class="comment">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
 						<button class="bt-buy">Buy Tickets</button>
 					</div>
 				</li>
 				<li class="city">
 					<div class="img-wrap">
-						<img src="../img/paris.jpg" alt="city" class="img">
+						<img src="../img/b3.png" alt="공연포스터" class="img">
 					</div>
 					<div class="cont-wrap">
 						<h4 class="name">Paris</h4>
-						<div class="date">Sat 25 Nov 2021</div>
+						<div class="date">Sat 08 Feb 2020</div>
 						<p class="comment">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
 						<button class="bt-buy">Buy Tickets</button>
 					</div>
 				</li>
 				<li class="city">
 					<div class="img-wrap">
-						<img src="../img/sanfran.jpg" alt="city" class="img">
+						<img src="../img/b2.jpg" alt="공연포스터" class="img">
 					</div>
 					<div class="cont-wrap">
 						<h4 class="name">San Francisco</h4>
